<resources>
    <string name="app_name">MovieProject</string>
    <string name="movie_s_name">Movie\'s name</string>
    <string name="movie_s_description">Movie\'s description</string>
    <string name="movie_s_image_url">Movie\'s image URL</string>
    <string name="show">show</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="movieCreated">Movie Created</string>
    <string name="movie_list_are_empty">movie list are empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_edit_the_movie_or_to_delete_it">Do you want to edit the movie or to delete it?</string>
    <string name="go">GO</string>
    <string name="search">search</string>
    <string name="add_by_internet">Add by internet</string>
    <string name="add_by_yourself">Add by yourself</string>
    <string name="exit">Exit</string>
    <string name="delete_all">Delete all</string>
    <string name="gotopage">Go To Page</string>
    <string name="moviepage">Movie Page</string>
    <string name="share">share</string>
    <string name="shares">Share</string>
    <string name="addmovie">addMovie</string>
    <string name="setting">setting</string>
    <string name="random_movie">Random Movie</string>
    <string name="noinformationexisted">Movie length: no information existed</string>
    <string name="releasedate">Release Date:</string>
    <string name="movielenght">Movie length:</string>
    <string name="noinformation">no information existed</string>
    <string name="movielength2">hours and</string>
    <string name="movielength3">minutes</string>
    <string name="budget">Budget:</string>
    <string name="score">Score:</string>
    <string name="noinfomration2">no information existed</string>
    <string name="share1">You just have to see the movie</string>
    <string name="share2">. The movie score is</string>
    <string name="movietitleedit">Movie Title/name has to be filled</string>
    <string name="movieexsited">the movie title is already existed</string>
    <string name="nointernet">there is no internet connection</string>
    <string name="asecond">a second</string>
    <string name="givesecond">Give me a second</string>
    <string name="download">Downloading...</string>
    <string name="pleasewait">Please Wait...</string>
</resources>
